# curiem_project

./: .gitignore  pyproject.toml
ampere_report/: README.md  ampere_app.py
