[project]
name = "ampere-streamlit"
version = "0.1.0"
description = "Streamlit dashboard for Ampere data"
requires-python = ">=3.11"
authors = [{ name = "Anton Miniazev" }]
dependencies = [
    "streamlit==1.39.0",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "requests==2.32.3",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["ampere_report"]
